Tools/GL_Header/shaderc/shaderc.pp

{      shaderc_compiler_t compiler = shaderc_compiler_initialize(); }
{      // On the same, other or multiple simultaneous threads. }
{      shaderc_compilation_result_t result = shaderc_compile_into_spv( }
{          compiler, "#version 450\nvoid main() ", 27, }
{          shaderc_glsl_vertex_shader, "main.vert", "main", nullptr); }
{      // Do stuff with compilation results. }
{      shaderc_result_release(result); }
{      // Once no more compilations are to happen. }
{      shaderc_compiler_release(compiler); }
{ An opaque handle to an object that manages all compiler state. }
type
  Pshaderc_compiler_t = ^Tshaderc_compiler_t;
  Tshaderc_compiler_t = Pshaderc_compiler;
{ Returns a shaderc_compiler_t that can be used to compile modules. }
{ A return of NULL indicates that there was an error initializing the compiler. }
{ Any function operating on shaderc_compiler_t must offer the basic }
{ thread-safety guarantee. }
{ [http://herbsutter.com/2014/01/13/gotw-95-solution-thread-safety-and-synchronization/] }
{ That is: concurrent invocation of these functions on DIFFERENT objects needs }
{ no synchronization; concurrent invocation of these functions on the SAME }
{ object requires synchronization IF AND ONLY IF some of them take a non-const }
{ argument. }

function shaderc_compiler_initialize:Tshaderc_compiler_t;cdecl;external;
{ Releases the resources held by the shaderc_compiler_t. }
{ After this call it is invalid to make any future calls to functions }
{ involving this shaderc_compiler_t. }
procedure shaderc_compiler_release(para1:Tshaderc_compiler_t);cdecl;external;
{ An opaque handle to an object that manages options to a single compilation }
{ result. }
type
  Pshaderc_compile_options_t = ^Tshaderc_compile_options_t;
  Tshaderc_compile_options_t = Pshaderc_compile_options;
{ Returns a default-initialized shaderc_compile_options_t that can be used }
{ to modify the functionality of a compiled module. }
{ A return of NULL indicates that there was an error initializing the options. }
{ Any function operating on shaderc_compile_options_t must offer the }
{ basic thread-safety guarantee. }

function shaderc_compile_options_initialize:Tshaderc_compile_options_t;cdecl;external;
{ Returns a copy of the given shaderc_compile_options_t. }
{ If NULL is passed as the parameter the call is the same as }
{ shaderc_compile_options_init. }
(* Const before type ignored *)
function shaderc_compile_options_clone(options:Tshaderc_compile_options_t):Tshaderc_compile_options_t;cdecl;external;
{ Releases the compilation options. It is invalid to use the given }
{ shaderc_compile_options_t object in any future calls. It is safe to pass }
{ NULL to this function, and doing such will have no effect. }
procedure shaderc_compile_options_release(options:Tshaderc_compile_options_t);cdecl;external;
{ Adds a predefined macro to the compilation options. This has the same }
{ effect as passing -Dname=value to the command-line compiler.  If value }
{ is NULL, it has the same effect as passing -Dname to the command-line }
{ compiler. If a macro definition with the same name has previously been }
{ added, the value is replaced with the new value. The macro name and }
{ value are passed in with char pointers, which point to their data, and }
{ the lengths of their data. The strings that the name and value pointers }
{ point to must remain valid for the duration of the call, but can be }
{ modified or deleted after this function has returned. In case of adding }
{ a valueless macro, the value argument should be a null pointer or the }
{ value_length should be 0u. }
(* Const before type ignored *)
(* Const before type ignored *)
procedure shaderc_compile_options_add_macro_definition(options:Tshaderc_compile_options_t; name:Pchar; name_length:Tsize_t; value:Pchar; value_length:Tsize_t);cdecl;external;
{ Sets the source language.  The default is GLSL. }
procedure shaderc_compile_options_set_source_language(options:Tshaderc_compile_options_t; lang:Tshaderc_source_language);cdecl;external;
{ Sets the compiler mode to generate debug information in the output. }
procedure shaderc_compile_options_set_generate_debug_info(options:Tshaderc_compile_options_t);cdecl;external;
{ Sets the compiler optimization level to the given level. Only the last one }
{ takes effect if multiple calls of this function exist. }
procedure shaderc_compile_options_set_optimization_level(options:Tshaderc_compile_options_t; level:Tshaderc_optimization_level);cdecl;external;
{ Forces the GLSL language version and profile to a given pair. The version }
{ number is the same as would appear in the #version annotation in the source. }
{ Version and profile specified here overrides the #version annotation in the }
{ source. Use profile: 'shaderc_profile_none' for GLSL versions that do not }
{ define profiles, e.g. versions below 150. }
procedure shaderc_compile_options_set_forced_version_profile(options:Tshaderc_compile_options_t; version:longint; profile:Tshaderc_profile);cdecl;external;
{ Source text inclusion via #include is supported with a pair of callbacks }
{ to an "includer" on the client side.  The first callback processes an }
{ inclusion request, and returns an include result.  The includer owns }
{ the contents of the result, and those contents must remain valid until the }
{ second callback is invoked to release the result.  Both callbacks take a }
{ user_data argument to specify the client context. }
{ To return an error, set the source_name to an empty string and put your }
{ error message in content. }
{ An include result. }
{ The name of the source file.  The name should be fully resolved }
{ in the sense that it should be a unique name in the context of the }
{ includer.  For example, if the includer maps source names to files in }
{ a filesystem, then this name should be the absolute path of the file. }
{ For a failed inclusion, this string is empty. }
(* Const before type ignored *)
{ The text contents of the source file in the normal case. }
{ For a failed inclusion, this contains the error message. }
(* Const before type ignored *)
{ User data to be passed along with this request. }
type
  Pshaderc_include_result = ^Tshaderc_include_result;
  Tshaderc_include_result = record
      source_name : Pchar;
      source_name_length : Tsize_t;
      content : Pchar;
      content_length : Tsize_t;
      user_data : pointer;
    end;
{ The kinds of include requests. }
{ E.g. #include "source" }
{ E.g. #include <source> }
  Tshaderc_include_type =  Longint;
  Const
    shaderc_include_type_relative = 0;
    shaderc_include_type_standard = 1;

{ An includer callback type for mapping an #include request to an include }
{ result.  The user_data parameter specifies the client context.  The }
{ requested_source parameter specifies the name of the source being requested. }
{ The type parameter specifies the kind of inclusion request being made. }
{ The requesting_source parameter specifies the name of the source containing }
{ the #include request.  The includer owns the result object and its contents, }
{ and both must remain valid until the release callback is called on the result }
{ object. }
(* Const before type ignored *)
(* Const before type ignored *)
type
  Pshaderc_include_resolve_fn = ^Tshaderc_include_resolve_fn;
  Tshaderc_include_resolve_fn = function (user_data:pointer; requested_source:Pchar; _type:longint; requesting_source:Pchar; include_depth:Tsize_t):Pshaderc_include_result;cdecl;
{ An includer callback type for destroying an include result. }

  Tshaderc_include_result_release_fn = procedure (user_data:pointer; include_result:Pshaderc_include_result);cdecl;
{ Sets includer callback functions. }
